--- a/sistemas-operativos-en-red/clases/08-10-2025.md
+++ b/sistemas-operativos-en-red/clases/08-10-2025.md
@@ -20,5 +20,52 @@ https://blogdesistemas.com/instalar-ubuntu-server-20-04/
 `sudo systemctl enable ssh`
 
 
-nunca poner el dhcp automatico ya que si se apaga y enciende cambia de ip y muchas configuraciones se estropean. 
-siempre estatica
+==nunca poner el dhcp automático ya que si se apaga y enciende cambia de ip y muchas configuraciones se estropean siempre estática. siempre usar la version grafica windows==
+
+# ACTIVIDAD
+- **instalar active directory graficamente** 
+- **crear un user en powershell con comandos**
+
+
+192.168.1.200 como Ipv4
+127.0.0.1 como DNS
+
+INSTALAR DIRECTORIO ACTIVO EN WINDOWS SERVER Y CREAR UN USUARIO DESDE POWERSHELL UTILIZANDO LOS COMANDOS DE CREACIÓN DE USUARIOS DEL DIRECTORIO ACTIVO
+
+
+`S C:\Users\Administrador> $contraseña = Read-Host "Escribe una contraseña para el nuevo usuario" -AsSecureString`
+`Escribe una contraseña para el nuevo usuario: ********`
+`PS C:\Users\Administrador> New-ADUser `
+>>  `-Name "Mohamed Kamil" `
+>>  `-GivenName "Mohamed" `
+>>  `-Surname "Kamil" `
+>>  `-SamAccountName "mkamil" `
+>>  `-UserPrincipalName "mkamil@kamil.local" `
+>>  `-Path "CN=Users,DC=kamil,DC=local" `
+>>  `-AccountPassword $contraseña `
+>>  `-Enabled $true `
+>>  `-ChangePasswordAtLogon $true `
+>>  `-DisplayName "Mohamed Kamil" `
+>>  `-Description "Usuario de prueba"`
+`PS C:\Users\Administrador> Get-ADUser -Identity mkamil -Properties Name,Enabled,DistinguishedName | Format-List`
+
+
+`DistinguishedName : CN=Mohamed Kamil,CN=Users,DC=kamil,DC=local`
+`Enabled           : True`
+`GivenName         : Mohamed`
+`Name              : Mohamed Kamil`
+`ObjectClass       : user`
+`ObjectGUID        : c5f873d3-4270-4a39-a67c-da4b791b5d31`
+`SamAccountName    : mkamil`
+`SID               : S-1-5-21-2798617740-3423093550-2798146572-1105`
+`Surname           : Kamil`
+`UserPrincipalName : mkamil@kamil.local`
+
+
+
+`PS C:\Users\Administrador>`
+
+
+![[Pasted image 20251008195858.png]]
+
+![[Pasted image 20251008200011.png]]
