--- a/sistemas-operativos-en-red/clases/08-10-2025.md
+++ b/sistemas-operativos-en-red/clases/08-10-2025.md
@@ -66,9 +66,7 @@ INSTALAR DIRECTORIO ACTIVO EN WINDOWS SERVER Y CREAR UN USUARIO DESDE POWERSHELL
     PS C:\Users\Administrador>
 
 
-![[Pasted image 20251008195858.png]]
-
-![Descripción de la imagen](fotos/Pasted image 20251008195858.png)
+![Descripción de la imagen](fotos/activedirectory1.png)
 ![Otra descripción](fotos/Pasted image 20251008200011.png)
 
 
