Actualización de notas

--- a/sistemas-operativos-en-red/clases/08-10-2025.md
+++ b/sistemas-operativos-en-red/clases/08-10-2025.md
@@ -65,9 +65,6 @@ INSTALAR DIRECTORIO ACTIVO EN WINDOWS SERVER Y CREAR UN USUARIO DESDE POWERSHELL
     
     PS C:\Users\Administrador>
 
+![Instalación de Active Directory](fotos/activedirectory1.png)
 
-![Descripción de la imagen]([./fotos/activedirectory1.png](https://github.com/MohamedKamil-hub/segundo-SMR/blob/162858a851bccbcf4ba8e147bbc40ab7831c8ff0/fotos/activedirectory1.png))
-![Otra descripción](fotos/Pasted image 20251008200011.png)
-
-
-![[Pasted image 20251008200011.png]]
+![Comprobación de usuarios creados](fotos/comporobacionusers.png)
