Actualización de notas

--- a/sistemas-operativos-en-red/clases/08-10-2025.md
+++ b/sistemas-operativos-en-red/clases/08-10-2025.md
@@ -65,6 +65,11 @@ INSTALAR DIRECTORIO ACTIVO EN WINDOWS SERVER Y CREAR UN USUARIO DESDE POWERSHELL
     
     PS C:\Users\Administrador>
 
-![Instalación de Active Directory](fotos/activedirectory1.png)
 
-![Comprobación de usuarios creados](fotos/comporobacionusers.png)
+
+
+
+
+![Instalación de Active Directory](../../fotos/activedirectory1.png)
+
+![Instalación de Active Directory](../../fotos/comporobacionusers.png)
