Actualización de notas

--- a/sistemas-operativos-en-red/clases/22-10-2025.md
+++ b/sistemas-operativos-en-red/clases/22-10-2025.md
@@ -31,4 +31,13 @@ conexion remoto y poner la ip de la maquina objetivo  desde el anfitrion
 actividad
 crear una estructura de clase con varios ciclos cursos y estudiantes solo crear la estructura
 nueva unidad organizativa
-grupos usuarios
+grupos 
+usuarios
+
+jesus.nino@thepower.education
+
+NUNCA PONER ACENTOS YA QUE PUEDE CREAR CONFLICTOS
+
+![[{6A57EF82-2BF4-4C9C-BD78-A5AE097C1CBD}.png]]
+
+![[{427E4417-2FE4-418B-ACA5-EE23BF4D1E6F}.png]]
