Actualización de notas

--- a/sistemas-operativos-en-red/clases/22-10-2025.md
+++ b/sistemas-operativos-en-red/clases/22-10-2025.md
@@ -38,6 +38,9 @@ jesus.nino@thepower.education
 
 NUNCA PONER ACENTOS YA QUE PUEDE CREAR CONFLICTOS
 
-![[{6A57EF82-2BF4-4C9C-BD78-A5AE097C1CBD}.png]]
 
-![[{427E4417-2FE4-418B-ACA5-EE23BF4D1E6F}.png]]
+![AD Completo](./../../fotos/{6A57EF82-2BF4-4C9C-BD78-A5AE097C1CBD}.png)
+
+
+
+![AD Grupos](./../../fotos/{427E4417-2FE4-418B-ACA5-EE23BF4D1E6F}.png)
