Actualización de notas

--- a/sistemas-operativos-en-red/clases/22-10-2025.md
+++ b/sistemas-operativos-en-red/clases/22-10-2025.md
@@ -1,42 +1,25 @@
-u    dueño
-g   grupo del sueño
-o    otros
-
-r 4     leer
-w 2    escribir
-x 1      ejecutar
-
- 755 o 750 son lo mas comun
-que permisos podrias cambiar a un usuario
+u    dueño                                                        r 4     leer        
+g   grupo del dueño                                        w 2    escribir
+o    otros                                                          x 1     ejecutar     
 
 carpetas compartidas windows serv
-mandan los permisos nfts
+predominan los permisos nfts
 
 Get-Acl
 para ver permisos en powershell
-
-
 Set-Acl -AclObject $almacencontinepermios
 
-
 **directorio activo**
-maquina en puente
-ping funciona
-firewall desactivado
-habilitar accesi remoto
-conexion remoto y poner la ip de la maquina objetivo  desde el anfitrion
-
-
-
-actividad
+1. maquina en puente
+2. ping funciona
+3. firewall desactivado
+4. habilitar accesi remoto
+5. conexion remoto y poner la ip de la maquina objetivo  desde el anfitrion
+#### actividad
 crear una estructura de clase con varios ciclos cursos y estudiantes solo crear la estructura
 nueva unidad organizativa
 grupos 
 usuarios
-
-jesus.nino@thepower.education
-
-NUNCA PONER ACENTOS YA QUE PUEDE CREAR CONFLICTOS
 
 
 ![AD Completo](./../../fotos/{6A57EF82-2BF4-4C9C-BD78-A5AE097C1CBD}.png)
