Actualización de notas

--- a/ingles/27-10-2025.md
+++ b/ingles/27-10-2025.md
@@ -22,3 +22,52 @@ formal
 communication
 
 you may offend the other person
+
+
+
+
+Analyze Phase: Compare the three introductions and  
+identify what changes:
+
+UNIT 1  
+19  
+Element Formal Standard Informal  
+Greeting - Hi everyone -  
+Name Full name +  
+title  
+- First name  
+only  
+Job  
+description  
+- What you  
+do  
+-  
+Ending - - Question  
+1 List two elements that stay constant across  
+all three  
+2 Micro-rule: More formal = more ______ de-  
+tails, more ______ endings, more ______  
+names  
+Analysis: Register changes serve professional purpo-  
+ses because _____  
+Professional Introduction Formula: Greeting + Name  
++ Job/Role + What you do + Polite  
+ending  
+Practice A2: Audience Appropriateness  
+Decide Phase: Match each introduction style to the  
+appropriate situation:  
+1 Meeting a new client >Introduction _____  
+2 First day team meeting > Introduction _____  
+3 Casual lunch conversation > Introduction  
+_____  
+Analyze Phase: Explain why using the wrong register  
+could cause problems:  
+Wrong register problems (match the mistake with the  
+most likely consequence):  
+A) Too informal with senior management >( ) reduced  
+credibility ( ) friendly rapport ( ) clear  
+hierarchy  
+B) Too formal with close colleagues > ( ) distance/  
+coldness ( ) clarity ( ) speed  
+Complete: Getting register wrong can damage  
+______ because ______
