Actualización de notas

--- a/sistemas-operativos-en-red/clases/05-11-2025.md
+++ b/sistemas-operativos-en-red/clases/05-11-2025.md
@@ -16,4 +16,4 @@ Máscara de subred, encontrar equipos en la misma zona, dominio de colisión
 
 ### configurar dns entre ubuntu y windows server en red interna y comprobar resolución de nombres
 
-![[Pasted image 20251105212450.png]]
+![Pasted image 20251105212450](./../../fotos/Pasted%20image%2020251105212450.png)
