Actualización de notas

--- a/ingles/29-09-2025.md
+++ b/ingles/29-09-2025.md
@@ -2,3 +2,4 @@
 
 Hi my name is Mohamed Kamil am 18 years old  i am from Avila and i my parents ar morrocan  , i spend my free time reading comics , playing videogames and  practicing boxing, i choosed SMR cuz i like the freedom it gives and the future it has in the jobs industry specially i like Linux 
 i wanna improve my english mainly because i alwasy find myself in english resources courses fimls and all that major stuff is mainly in english
+![[Pasted image 20251120170321.png]]
